--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Idea editor folder (both linux and windows)
+idea/
+idea\\
